-> Исправлен блок user-profile -> Доработана адаптивность блока user-profile (изменения в project-instagram.js)

--- a/project-instagram.html
+++ b/project-instagram.html
@@ -5,6 +5,8 @@
 
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="bundles/project-instagram.css">
+		<script type="text/javascript" src="jquery-3.3.1.js"></script>
+		<script type="text/javascript" src="bundles/project-instagram.js"></script>
 	
 	</head>
 
@@ -41,13 +43,23 @@
 						</div>
 						<a class="link-button" href="">Подписаться</a>
 					</div>
-					<div class="main-subscribers">
-						
+					<div class="main-subs">
+						<a class="main-subs__info" href="">
+							<b style="margin-right:4px;">16</b>
+							 публикации
+						</a>
+						<a class="main-subs__info" href="">
+							<b style="margin-right:4px;">2 млн</b>
+							подписчиков
+						</a>
+						<a class="main-subs__info" href="">	
+							Подписки:
+							<b style="margin-left:4px;">762</b>
+						</a>
 					</div>
 					<div class="main-info">
 						<b>Food52</b><br>
-						Eat thoughtfully, live joyfully. &#127860;Hit the link below to get the recipes and shop our feed. <br>
-						&#10549;<br>
+						Eat thoughtfully, live joyfully. &#127860;Hit the link below to get the recipes and shop our feed. &#10549;<br>
 						<a class="main-info__link" href="">#f52grams</a><br>
 						<b><a class="main-info__link" href="">f52.co/instagram</a></b><br>
 					</div>
