-> Добавлена пасхалочка -> Добавлена иконка и подпись

--- a/project-instagram.html
+++ b/project-instagram.html
@@ -5,6 +5,8 @@
 
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="bundles/project-instagram.css">
+		<link type="images/x-icon" rel="icon" href="images/h-icon.png">
+		<title>Food52 (@food52) • Фото и видео в Instagram</title>
 		<script type="text/javascript" src="jquery-3.3.1.js"></script>
 		<script type="text/javascript" src="bundles/project-instagram.js"></script>
 	
@@ -15,7 +17,10 @@
 		<div class="page__block fixed-header">
 			<div class="fixed-header__header-content content-block">
 				<div class="content-block__h-sides content-block__h-sides_left">
-					<img src="images/h-foto.png">
+					<div class="easter-egg">
+						<img class="easter-egg__front" src="images/h-foto.png">
+						<img class="easter-egg__back" src="images/hack.png">
+					</div>
 					<div class="line-draw"></div>
 					<img class="content-block__logo" src="images/h-logo.png">
 				</div>
